obdalib-core/src/main/java/it/unibz/krdb/obda/parser/DatalogParser.java
// $ANTLR 3.4 C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g 2012-06-20 10:08:55

package it.unibz.krdb.obda.parser;

/*
 * #%L
 * ontop-obdalib-core
 * %%
 * Copyright (C) 2009 - 2013 Free University of Bozen-Bolzano
 * %%
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * #L%
 */

import it.unibz.krdb.obda.model.CQIE;
import it.unibz.krdb.obda.model.DatalogProgram;
import it.unibz.krdb.obda.model.Function;
import it.unibz.krdb.obda.model.Term;
import it.unibz.krdb.obda.model.OBDADataFactory;
import it.unibz.krdb.obda.model.Predicate;
import it.unibz.krdb.obda.model.URIConstant;
import it.unibz.krdb.obda.model.ValueConstant;
import it.unibz.krdb.obda.model.Variable;
import it.unibz.krdb.obda.model.impl.OBDADataFactoryImpl;
import it.unibz.krdb.obda.model.impl.OBDAVocabulary;

import java.util.HashMap;
import java.util.HashSet;
import java.util.LinkedList;
import java.util.List;
import java.util.Vector;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.TokenStream;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class DatalogParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHA", "ALPHANUM", "AMPERSAND", "APOSTROPHE", "ASTERISK", "AT", "BACKSLASH", "BASE", "CARET", "COLON", "COMMA", "DASH", "DIGIT", "DOLLAR", "DOT", "DOUBLE_SLASH", "EQUALS", "EXCLAMATION", "GREATER", "HASH", "ID", "ID_CORE", "ID_PLAIN", "ID_START", "IMPLIES", "INV_IMPLIES", "LESS", "LPAREN", "LSQ_BRACKET", "PERCENT", "PLUS", "PREFIX", "QUESTION", "QUOTE_DOUBLE", "QUOTE_SINGLE", "REFERENCE", "RPAREN", "RSQ_BRACKET", "SCHEMA", "SEMI", "SLASH", "STRING_LITERAL", "STRING_LITERAL2", "STRING_PREFIX", "STRING_URI", "TILDE", "UNDERSCORE", "URI_PATH", "WS"
    };

    public static final int EOF=-1;
    public static final int ALPHA=4;
    public static final int ALPHANUM=5;
    public static final int AMPERSAND=6;
    public static final int APOSTROPHE=7;
    public static final int ASTERISK=8;
    public static final int AT=9;
    public static final int BACKSLASH=10;
    public static final int BASE=11;
    public static final int CARET=12;
    public static final int COLON=13;
    public static final int COMMA=14;
    public static final int DASH=15;
    public static final int DIGIT=16;
    public static final int DOLLAR=17;
    public static final int DOT=18;
    public static final int DOUBLE_SLASH=19;
    public static final int EQUALS=20;
    public static final int EXCLAMATION=21;
    public static final int GREATER=22;
    public static final int HASH=23;
    public static final int ID=24;
    public static final int ID_CORE=25;
    public static final int ID_PLAIN=26;
    public static final int ID_START=27;
    public static final int IMPLIES=28;
    public static final int INV_IMPLIES=29;
    public static final int LESS=30;
    public static final int LPAREN=31;
    public static final int LSQ_BRACKET=32;
    public static final int PERCENT=33;
    public static final int PLUS=34;
    public static final int PREFIX=35;
    public static final int QUESTION=36;
    public static final int QUOTE_DOUBLE=37;
    public static final int QUOTE_SINGLE=38;
    public static final int REFERENCE=39;
    public static final int RPAREN=40;
    public static final int RSQ_BRACKET=41;
    public static final int SCHEMA=42;
    public static final int SEMI=43;
    public static final int SLASH=44;
    public static final int STRING_LITERAL=45;
    public static final int STRING_LITERAL2=46;
    public static final int STRING_PREFIX=47;
    public static final int STRING_URI=48;
    public static final int TILDE=49;
    public static final int UNDERSCORE=50;
    public static final int URI_PATH=51;
    public static final int WS=52;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DatalogParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DatalogParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return DatalogParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g"; }


    /** Constants */
    private static final String OBDA_DEFAULT_URI = "obda-default";
    private static final String OBDA_BASE_URI = "obda-base";
    private static final String OBDA_SELECT_ALL = "obda-select-all";

    /** Map of directives */
    private HashMap<String, String> directives = new HashMap<String, String>();

    /** Set of variable terms */
    private HashSet<Variable> variables = new HashSet<Variable>();

    /** A factory to construct the predicates and terms */
    private static final OBDADataFactory dfac = OBDADataFactoryImpl.getInstance();

    /** Select all flag */
    private boolean isSelectAll = false;

    public HashMap<String, String> getDirectives() {
        return directives;
    }


    // $ANTLR start "parse"
    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:105:1: parse returns [DatalogProgram value] : prog EOF ;
    public final DatalogProgram parse() throws RecognitionException {
        DatalogProgram value = null;


        DatalogProgram prog1 =null;


        try {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:106:3: ( prog EOF )
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:106:5: prog EOF
            {
            pushFollow(FOLLOW_prog_in_parse52);
            prog1=prog();

            state._fsp--;
            if (state.failed) return value;

            match(input,EOF,FOLLOW_EOF_in_parse54); if (state.failed) return value;

            if ( state.backtracking==0 ) {
                  value = prog1;
                }

            }

        }
        catch (RecognitionException e) {
             
                  throw e;
                
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "parse"



    // $ANTLR start "prog"
    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:113:1: prog returns [DatalogProgram value] : ( base )? ( directive )* ( rule )+ ;
    public final DatalogProgram prog() throws RecognitionException {
        DatalogProgram value = null;


        CQIE rule2 =null;



          value = dfac.getDatalogProgram();
          CQIE rule = null;

        try {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:118:3: ( ( base )? ( directive )* ( rule )+ )
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:118:5: ( base )? ( directive )* ( rule )+
            {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:118:5: ( base )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==BASE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:118:5: base
                    {
                    pushFollow(FOLLOW_base_in_prog86);
                    base();

                    state._fsp--;
                    if (state.failed) return value;

                    }
                    break;

            }


            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:119:5: ( directive )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==PREFIX) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:119:5: directive
            	    {
            	    pushFollow(FOLLOW_directive_in_prog93);
            	    directive();

            	    state._fsp--;
            	    if (state.failed) return value;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:120:5: ( rule )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==COLON||LA3_0==ID_PLAIN||(LA3_0 >= IMPLIES && LA3_0 <= INV_IMPLIES)||(LA3_0 >= STRING_PREFIX && LA3_0 <= STRING_URI)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:120:6: rule
            	    {
            	    pushFollow(FOLLOW_rule_in_prog102);
            	    rule2=rule();

            	    state._fsp--;
            	    if (state.failed) return value;

            	    if ( state.backtracking==0 ) {
            	          rule = rule2;
            	          if (isSelectAll) {
            	            List<Term> variableList = new Vector<Term>();
            	            variableList.addAll(variables); // Import all the data from the Set to a Vector.
            	             
            	            // Get the head atom
            	            Function head = rule.getHead();
            	            String name = head.getPredicate().getName();
            	            int size = variableList.size(); 
            	            
            	            // Get the predicate atom
            	            Predicate predicate = dfac.getPredicate(name, size);
            	            Function newhead = dfac.getFunction(predicate, variableList);
            	            rule.updateHead(newhead);
            	            
            	            isSelectAll = false;  
            	          }
            	            
            	          value.appendRule(rule);
            	        }

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return value;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "prog"



    // $ANTLR start "directive"
    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:143:1: directive : PREFIX prefix LESS uriref GREATER ;
    public final void directive() throws RecognitionException {
        DatalogParser.prefix_return prefix3 =null;

        DatalogParser.uriref_return uriref4 =null;



          String prefix = "";
          String uriref = "";

        try {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:148:3: ( PREFIX prefix LESS uriref GREATER )
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:148:5: PREFIX prefix LESS uriref GREATER
            {
            match(input,PREFIX,FOLLOW_PREFIX_in_directive126); if (state.failed) return ;

            pushFollow(FOLLOW_prefix_in_directive128);
            prefix3=prefix();

            state._fsp--;
            if (state.failed) return ;

            match(input,LESS,FOLLOW_LESS_in_directive130); if (state.failed) return ;

            pushFollow(FOLLOW_uriref_in_directive132);
            uriref4=uriref();

            state._fsp--;
            if (state.failed) return ;

            match(input,GREATER,FOLLOW_GREATER_in_directive134); if (state.failed) return ;

            if ( state.backtracking==0 ) {
                  prefix = (prefix3!=null?input.toString(prefix3.start,prefix3.stop):null);
                  prefix = prefix.substring(0, prefix.length()-1);  
                  if (prefix == null || prefix == "") // if there is no prefix id put the default name.
                    prefix = OBDA_DEFAULT_URI;

                  uriref = (uriref4!=null?input.toString(uriref4.start,uriref4.stop):null);
                  
                  directives.put(prefix, uriref);
                }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "directive"



    // $ANTLR start "base"
    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:160:1: base : BASE LESS uriref GREATER ;
    public final void base() throws RecognitionException {
        DatalogParser.uriref_return uriref5 =null;



          String prefix = OBDA_BASE_URI; // prefix name for the base
          String uriref = "";

        try {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:165:3: ( BASE LESS uriref GREATER )
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:165:5: BASE LESS uriref GREATER
            {
            match(input,BASE,FOLLOW_BASE_in_base154); if (state.failed) return ;

            match(input,LESS,FOLLOW_LESS_in_base156); if (state.failed) return ;

            pushFollow(FOLLOW_uriref_in_base158);
            uriref5=uriref();

            state._fsp--;
            if (state.failed) return ;

            match(input,GREATER,FOLLOW_GREATER_in_base160); if (state.failed) return ;

            if ( state.backtracking==0 ) {
                  uriref = (uriref5!=null?input.toString(uriref5.start,uriref5.stop):null);      
                  directives.put(prefix, uriref);
                }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "base"



    // $ANTLR start "rule"
    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:171:1: rule returns [CQIE value] : ( ( ( head )? INV_IMPLIES )=> datalog_syntax_rule | ( ( body )? IMPLIES )=> swirl_syntax_rule );
    public final CQIE rule() throws RecognitionException {
        CQIE value = null;


        CQIE datalog_syntax_rule6 =null;

        CQIE swirl_syntax_rule7 =null;


        try {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:172:3: ( ( ( head )? INV_IMPLIES )=> datalog_syntax_rule | ( ( body )? IMPLIES )=> swirl_syntax_rule )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==INV_IMPLIES) && (synpred1_Datalog())) {
                alt4=1;
            }
            else if ( (LA4_0==STRING_URI) ) {
                int LA4_2 = input.LA(2);

                if ( (synpred1_Datalog()) ) {
                    alt4=1;
                }
                else if ( (synpred2_Datalog()) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return value;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;

                }
            }
            else if ( (LA4_0==ID_PLAIN) ) {
                int LA4_3 = input.LA(2);

                if ( (synpred1_Datalog()) ) {
                    alt4=1;
                }
                else if ( (synpred2_Datalog()) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return value;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae;

                }
            }
            else if ( (LA4_0==COLON||LA4_0==STRING_PREFIX) ) {
                int LA4_4 = input.LA(2);

                if ( (synpred1_Datalog()) ) {
                    alt4=1;
                }
                else if ( (synpred2_Datalog()) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return value;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 4, input);

                    throw nvae;

                }
            }
            else if ( (LA4_0==IMPLIES) && (synpred2_Datalog())) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:172:5: ( ( head )? INV_IMPLIES )=> datalog_syntax_rule
                    {
                    pushFollow(FOLLOW_datalog_syntax_rule_in_rule189);
                    datalog_syntax_rule6=datalog_syntax_rule();

                    state._fsp--;
                    if (state.failed) return value;

                    if ( state.backtracking==0 ) { 
                          value = datalog_syntax_rule6;
                        }

                    }
                    break;
                case 2 :
                    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:175:5: ( ( body )? IMPLIES )=> swirl_syntax_rule
                    {
                    pushFollow(FOLLOW_swirl_syntax_rule_in_rule205);
                    swirl_syntax_rule7=swirl_syntax_rule();

                    state._fsp--;
                    if (state.failed) return value;

                    if ( state.backtracking==0 ) {
                          value = swirl_syntax_rule7;
                        }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "rule"



    // $ANTLR start "datalog_syntax_rule"
    // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:180:1: datalog_syntax_rule returns [CQIE value] : ( INV_IMPLIES body | datalog_syntax_alt );
    public final CQIE datalog_syntax_rule() throws RecognitionException {
        CQIE value = null;


        List<Function> body8 =null;

        CQIE datalog_syntax_alt9 =null;


        try {
            // C:\\Project\\Obdalib\\obdalib-parent\\obdalib-core\\src\\main\\java\\it\\unibz\\krdb\\obda\\parser\\Datalog.g:181:3: ( INV_IMPLIES body | datalog_syntax_alt )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==INV_IMPLIES) ) {
                alt5=1;
            }
            else if ( (LA5_0==COLON||LA5_0==ID_PLAIN||(LA5_0 >= STRING_PREFIX && LA5_0 <= STRING_URI)) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
